# unoxide

./: .gitignore  Cargo.toml  README.md  TODO.md  foo.txt
.github/workflows/: rust.yml  test.yml
scripts/: set-test-perms.sh  update-file.sh
src/: lib.rs  main.rs
src/cli/: help_messages.rs  interface.rs  mod.rs  subcommands.rs
src/constants/: help_messages.rs  mod.rs
src/handlers/: cat.rs  comm.rs  cut.rs  echo.rs  find.rs  grep.rs  head.rs  ls.rs  mod.rs  tail.rs  uniq.rs  wc.rs
src/handlers/helpers/: error_handler.rs  file_reader.rs  logging.rs  mod.rs
src/scripts/: set-test-perms.sh
src/utils/: comm_column.rs  entry_type.rs  enums.rs  extract.rs  file_reader.rs  mod.rs  uniq_flags.rs
tests/: test_cat.rs  test_comm.rs  test_cut.rs  test_echo.rs  test_find.rs  test_grep.rs  test_head.rs  test_ls.rs  test_tail.rs  test_uniq.rs  test_wc.rs
tests/resources/find/expected/: name_a.txt  name_csv.txt  name_csv_mp3.txt  name_txt_path_a_d.txt  name_txt_path_a_d.txt.windows  path1.txt  path_a.txt  path_a.txt.windows  path_a_b.txt  path_a_b.txt.windows  path_a_b_d.txt  path_a_b_d.txt.windows  path_d.txt  path_d.txt.windows  path_g.txt  type_d.txt  type_d_name_a.txt  type_d_path_a.txt  type_d_path_a.txt.windows  type_d_path_a_b.txt  type_d_path_a_b.txt.windows  type_d_path_a_b_d.txt  type_d_path_a_b_d.txt.windows  type_d_path_d.txt  type_d_path_d.txt.windows  type_f.txt  type_f_l.txt  type_f_name_a.txt  type_f_path_a.txt  type_f_path_a.txt.windows  type_f_path_a_b.txt  type_f_path_a_b.txt.windows  (+6 more)
tests/resources/head/: foo_uniq
tests/utils/: helpers.rs
(+58 files in other folders)
