[package]
authors = ["kaliv0"]
edition = "2021"
name = "unx"
version = "0.1.0"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
csv = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.5"
tabular = "0.2.0"
tempfile = "3.10.1"
users = "0.11.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
